# stock_intelligence_mcp

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/skills/: generate_stock_report.md
.github/workflows/: bump_version.yaml  ci_pipeline.yaml  create_python_release.yaml  deploy_docker_gcr.yaml  docker-verify.yml  helm_lint.yaml
Docker/: .dockerignore  Dockerfile
cookbook/: README.md  example_agno_os.py  template.env
k8s/: k8s_dashboard_admin.yaml  mcp_server_deployment.yaml  mcp_server_service.yaml
k8s/helm/: chart.yaml  values.yaml
k8s/helm/templates/: deployment.yaml
resources/: RSI.md  server_prompt.md
scripts/: run_server.ps1
src/: main.py
src/stock_intelligence_mcp/: main.py
src/stock_intelligence_mcp/ticker/: ticker.py
src/stock_intelligence_mcp/utils/: input_preprocessor.py  output_preprocessor.py
src/ticker/: ticker.py
src/utils/: input_preprocessor.py  output_preprocessor.py
tests/: test_ticker.py
